welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:2: error: not found: value If
If (getcolor.pink)
^